--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,21 +24,27 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-auth:19.1.0'
+
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
-    implementation 'com.google.firebase:firebase-core:17.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:22.2.0'
 
-    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
 
 
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-
-
-
 
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -46,9 +52,13 @@ dependencies {
 
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+
+    implementation 'com.google.firebase:firebase-messaging:17.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
 }
+
+//apply plugin 'com.google.gms.google-services'
